--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>No-nonsense Player</title>
+    <!-- <meta http-equiv="X-Frame-Options" content="allow"> -->
+    <title>Media Player</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
 </head>
 <body>
     <header>
@@ -25,8 +26,15 @@
                 <input type="text" id="mediaCode" placeholder="IMDB code">
                 <input type="number" id="seasonNumber" placeholder="Season Number" class="hidden" value="1" min="1">
                 <input type="number" id="episodeNumber" placeholder="Episode Number" class="hidden" value="1" min="1">
+            
+                <!-- Add a dropdown for source selection -->
+                <select id="sourceSelector">
+                    <option value="vidsrc">Vidsrc</option>
+                    <option value="superembed">Superembed</option>
+                </select>
+                
                 <input type="hidden" id="mediaType">
-            </div>
+            </div>            
         </div>
         <div class="player-container">
             <div id="placeholder">There are no media</div>
