add new source (vidsrc.cc) and delete per movie in history

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             
                 <!-- Add a dropdown for source selection -->
                 <select id="sourceSelector">
-                    <option value="vidsrc">Vidsrc</option>
+                    <option value="vidsrc">Embed.cc</option>
                     <option value="superembed">Superembed</option>
-                </select>
+                    <option value="vidsrccc">Vidsrc.cc</option>
+                </select>                
                 
                 <input type="hidden" id="mediaType">
             </div>            
