--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="X-Frame-Options" content="allow"> -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Media Player</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
-    <link rel="icon" type="image/png" href="../assets/favicon.png">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg" />
+    <link rel="icon" type="image/png" href="../assets/favicon.png" />
 </head>
 <body>
     <header>
@@ -23,19 +22,16 @@
                 <button id="seriesPlayerButton">Series Player</button>
             </div>
             <div class="fields">
-                <input type="text" id="mediaCode" placeholder="IMDB code">
-                <input type="number" id="seasonNumber" placeholder="Season Number" class="hidden" value="1" min="1">
-                <input type="number" id="episodeNumber" placeholder="Episode Number" class="hidden" value="1" min="1">
-            
-                <!-- Add a dropdown for source selection -->
+                <input type="text" id="mediaCode" placeholder="IMDB code" />
+                <input type="number" id="seasonNumber" placeholder="Season Number" class="hidden" value="1" min="1" />
+                <input type="number" id="episodeNumber" placeholder="Episode Number" class="hidden" value="1" min="1" />
                 <select id="sourceSelector">
                     <option value="vidsrc">Embed.cc</option>
                     <option value="superembed">Superembed</option>
-                    <option value="vidsrccc">Vidsrc.cc</option>
-                </select>                
-                
-                <input type="hidden" id="mediaType">
-            </div>            
+                    <option value="vidsrccc">vidsrc.cc</option>
+                </select>
+                <input type="hidden" id="mediaType" />
+            </div>
         </div>
         <div class="player-container">
             <div id="placeholder">There are no media</div>
@@ -52,8 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
     <script>
-        $(document).ready(function() {
-            // Check for URL parameter and set media code
+        $(document).ready(function () {
             const urlParams = new URLSearchParams(window.location.search);
             const imdbId = urlParams.get('imdb_id');
             if (imdbId) {
