--- a/search.html
+++ b/search.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>No-nonsense Player</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
             <button id="backToPlayer">Back to Player</button>
         </div>
         <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Search for movies or series...">
+            <input type="text" id="searchInput" placeholder="Search for movies or series..." />
             <div id="emptyState" class="hidden">Type in the search bar to find media.</div>
             <div id="searchResults" class="search-results"></div>
         </div>
