refactors by gpt o1 part 4

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <input type="number" id="episodeNumber" placeholder="Episode Number" class="hidden" value="1" min="1" />
                 
                 <select id="sourceSelector">
-                    <option value="vidsrc">Embed.cc</option>
+                    <option value="vidsrc">Vidsrc (Legacy)</option>
                     <option value="superembed">Superembed</option>
-                    <option value="vidsrccc">Vidsrc.cc</option>
+                    <option value="vidsrccc">Vidsrc.cc (New)</option>
                 </select>
 
                 <input type="hidden" id="mediaType" />
