--- a/search.html
+++ b/search.html
@@ -17,12 +17,8 @@
             <button id="backToPlayer">Back to Player</button>
         </div>
         <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Search for movies or series..." autocomplete="off"/>
+            <input type="text" id="searchInput" placeholder="Search for movies or series..." autocomplete="off">
             <div id="emptyState" class="">Type in the search bar to find media.</div>
-            <div class="search-status hidden">
-                <div class="spinner"></div>
-                <div class="status-text">Searching...</div>
-            </div>
             <div id="searchResults" class="search-results"></div>
         </div>
     </main>
