--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Media Player</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg" />
@@ -41,7 +41,7 @@
             <iframe id="player" src="" allowfullscreen class="hidden"></iframe>
         </div>
         <div class="toggle-width-container" style="margin-top: 10px;">
-            <button id="toggleFullscreenBtn">Toggle Full Width</button>
+            <button id="toggleTheatreBtn">Theatre Mode</button>
         </div>
         <div id="watchHistory" class="hidden">
             <div class="separate">
@@ -56,7 +56,6 @@
     <script src="script.js"></script>
     <script>
         $(document).ready(function() {
-            // Check for URL parameter and set media code
             const urlParams = new URLSearchParams(window.location.search);
             const imdbId = urlParams.get('imdb_id');
             if (imdbId) {
@@ -66,7 +65,7 @@
                 $('#seasonNumber').addClass('hidden');
                 $('#episodeNumber').addClass('hidden');
                 refreshPlayer();
-                replaceTitle('movie', imdbId); // You'd call with type and code
+                // replaceTitle called inside refreshPlayer -> after we get the actual title
             }
         });
     </script>
