--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <input type="hidden" id="mediaType" />
             </div>            
         </div>
+        <div class="separator"></div>
         <div class="player-container">
             <div id="placeholder">No media selected</div>
             <div id="loadingIndicator" class="hidden">Loading...</div>
